# plimsoll-action

./: .gitignore  CI-CONTRACT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: main-required-ci-contexts.json
.github/sanitizer/: trusted-hmac-canary.txt
.github/workflows/: ci.yml  openssf-scorecard.yml  published-tag-canary.yml  sanitize-public-artifacts.yml
docs/: GITHUB-ACTION.md
examples/: plimsoll-review.yml
samples/: real-assay-network-surface.json
scripts/: check_public_artifact_sanitization.py
src/plimsoll/: __init__.py  capture.py  cli.py  review.py  sarif.py  secrets.py
tests/: test_coverage_surface.py  test_rules_parity.py  test_sarif.py  test_secrets.py
tests/fixtures/: secret-rules.v1.json
