[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plimsoll"
version = "0.3.0"
description = "The load line for agent releases: runtime evidence review (capability diff, review policy, approval, audit)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Roel Schuurkes" }]
keywords = ["agent", "runtime", "evidence", "review", "capability", "audit", "assay"]
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
plimsoll = "plimsoll.cli:main"

[project.urls]
"Source" = "https://github.com/Rul1an/plimsoll"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plimsoll"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
